--- a/admin-node/Vagrantfile
+++ b/admin-node/Vagrantfile
@@ -1,4 +1,4 @@
-#d64-vbox -*- mode: ruby -*-
+#md64-vbox -*- mode: ruby -*-
 # vi: set ft=ruby :
 
 # All Vagrant configuration is done below. The "2" in Vagrant.configure
@@ -35,7 +35,7 @@ Vagrant.configure(2) do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.50.2"
+  config.vm.network "private_network", ip: "192.168.50.3"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
