--- a/misc/Vagrantfile
+++ b/misc/Vagrantfile
@@ -9,32 +9,42 @@ Vagrant.configure(2) do |config|
   # The most common configuration options are documented and commented below.
   # For a complete reference, please see the online documentation at
   # https://docs.vagrantup.com.
-  config.vm.box = "ubuntu/trusty64"
-  config.vm.box_check_update = false
 
+  # Every Vagrant development environment requires a box. You can search for
+  # boxes at https://atlas.hashicorp.com/search.
+  config.vm.box = "ceph-docker-box"
+
+  # The url from where the 'config.vm.box' box will be fetched if it
+  # doesn't already exist on the user's system.
+  #config.vm.box_url = "./01-create-ceph-docker-box/ceph-docker.box"
+
+  # Create a forwarded port mapping which allows access to a specific port
+  # within the machine from a port on the host machine. In the example below,
+  # accessing "localhost:8080" will access port 80 on the guest machine.
+  # config.vm.network "forwarded_port", guest: 80, host: 8080
+
+  # Create a private network, which allows host-only access to the machine
+  # using a specific IP.
+  # config.vm.network "private_network", ip: "192.168.33.10"
+
+  # Create a public network, which generally matched to bridged network.
+  # Bridged networks make the machine appear as another physical device on
+  # your network.
+  # config.vm.network "public_network"
+
+  config.vm.network "public_network", bridge: "eth0"
   
-  config.vm.network "public_network", bridge: "wlan0"
-  
-   config.vm.define "host" do |myrole|
-        myrole.vm.hostname = "host"
+  config.vm.define "host-1" do |myrole|
+        myrole.vm.hostname = "host-ceph-docker"
         myrole.vm.provision "file", source:"common.sh", destination:"common.sh"
-        myrole.vm.provision "shell", path:"host.sh", :args=> ENV['Gateway_Subnet']
+        myrole.vm.provision "shell", path:"host-1.sh", :args=> ENV['Gateway_Subnet']
+  end # end of host-1 config
  
-        
-        myrole.vm.provider "virtualbox" do |vb|
-            # Customize the amount of memory on the VM:
-            vb.memory = "1024"
-            
-            # disk
-            file_to_disk = "./tmp/host-1_large_disk.vdi"
-            unless File.exist?(file_to_disk)
-                vb.customize ['createhd', '--filename', file_to_disk, '--size', 10 * 1024]
-            end
-            vb.customize ['storageattach', :id, '--storagectl', 'SATAController', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', file_to_disk]
-
-        end # end of vm provider
-    end # end of config
+  config.vm.define "host-2" do |myrole|
+        myrole.vm.hostname = "host-ceph-docker"
+        myrole.vm.provision "file", source:"common.sh", destination:"common.sh"
+        myrole.vm.provision "shell", path:"host-2.sh", :args=> ENV['Gateway_Subnet']
+  end # end of host-2 config
+ 
 
 end
-
-
