--- a/allinone/Vagrantfile
+++ b/allinone/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure(2) do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
   config.vm.box = "ubuntu/trusty64"
-  config.vm.provision "shell", path:"monitor.sh"
+  config.vm.provision "shell", path:"demo.sh"
  #  config.vm.provision "shell", path:"demo.sh"
 
   # Disable automatic box update checking. If you disable this, then
