--- a/3-host/Vagrantfile
+++ b/3-host/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure(2) do |config|
   config.vm.box_check_update = false
 
   
-  config.vm.network "public_network", bridge: "wlan0"
+  config.vm.network "public_network", bridge: "eth0"
   
    config.vm.define "host-1" do |myrole|
         myrole.vm.hostname = "host-1"
